<resources>
    <string name="app_name">iFermi</string>
    <!-- Strings related to login -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <!-- User defined Strings -->
    <string name="logo_description">school logo, logo fermi</string>
    <string name="school_name">Istituto Superiore \'E. Fermi\'</string>
    <string name="school_address">Strada Spolverina, 5 Mantova</string>
    <string name="school_phone">Tel: +39 0376 262675</string>

    <string name="msg_news">News</string>

    <string name="menu_news">Home / News</string>
    <string name="menu_calendar">Calendario Giornaliero</string>
    <string name="menu_timetable">Orario</string>
    <string name="menu_school_calendar">Calendario Scolastico Annuale</string>
    <string name="menu_moodle">Moodle</string>
    <string name="menu_register">Registro Elettronico</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="close_drawer">Close Menu</string>
    <string name="open_drawer">Open Menu</string>

    <!-- Agenda -->
    <string name="agenda_title">Variazioni giornaliere</string>

    <!-- Calendar -->
    <string name="calendar_title">Calendario scolastico</string>

    <!-- Setting -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
